<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/gray"
        android:padding="10dp"
        android:textSize="48sp"
        android:gravity="end|bottom"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="7"
            />
        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            android:text="8"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:background="@color/gray"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="9"/>
        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:background="@color/gray"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:layout_weight="1"
            android:text="/"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/_4"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            android:text="@string/_5"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:background="@color/gray"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_6"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:background="@color/gray"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:layout_weight="1"
            android:text="@string/x"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="1"
            tools:ignore="HardcodedText,NestedWeights,UsingOnClickInXml" />
        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            android:text="@string/_2"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:background="@color/gray"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_3"
            tools:ignore="UsingOnClickInXml"/>
        <Button
            android:id="@+id/btnSub"
            android:layout_width="0dp"
            android:background="@color/gray"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:layout_weight="1"
            android:text="@string/_sub"
            tools:ignore="UsingOnClickInXml"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:background="@color/gray"
            android:layout_height="match_parent"
            android:onClick="onDecimalPoint"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="25dp"
            android:text="."
            tools:ignore="NestedWeights,UsingOnClickInXml"
            />

        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:background="@color/gray"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_0"
            tools:ignore="NestedWeights,UsingOnClickInXml"
            />
        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:background="@color/gray"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onClear"
            android:layout_weight="1"
            android:text="@string/_clr"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:background="@color/gray"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:layout_weight="1"
            android:text="@string/add"
            tools:ignore="ButtonStyle,UsingOnClickInXml"
             />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:background="@color/gray"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onEqual"
            android:layout_weight="1"
            android:text="@string/equal"
            tools:ignore="ButtonStyle,UsingOnClickInXml"
            />

    </LinearLayout>


</LinearLayout>